--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,481 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  padding: 0px;
+  margin: 0px;
+  font-family: Rubik;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 5px;
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.25);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background: #fac031;
+}
+
+#App {
+  position: relative;
+}
+
+
+/* Home Style */
+
+#Home {
+  width: 100%;
+  padding-top: 90px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+#Home__1 {
+  width: 37%;
+  margin-right: 2%;
+}
+
+#Home__1 h1 {
+  font-size: 40px;
+  margin-bottom: 40px;
+  letter-spacing: 2px;
+}
+
+#Home__1 h1 span {
+  color: #fac031;
+  font-family: cursive;
+  margin-left: 5px;
+}
+
+#Home__1 p {
+  margin-bottom: 35px;
+}
+
+#Home img {
+  margin-top: 45px;
+  width: 45%;
+  animation: move__1 5s 0s infinite;
+  margin-left: 3%;
+}
+
+@keyframes move__1 {
+  0% {
+    transform: translateY(0px);
+  }
+
+  50% {
+    transform: translateY(-15px);
+  }
+
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+button {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  outline: none;
+  border: 0;
+  vertical-align: middle;
+  text-decoration: none;
+  background: transparent;
+  padding: 0;
+  font-size: inherit;
+  font-family: inherit;
+}
+
+button.learn-more {
+  width: 12rem;
+  height: auto;
+}
+
+button.learn-more .circle {
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  position: relative;
+  display: block;
+  margin: 0;
+  width: 3rem;
+  height: 3rem;
+  background: #282936;
+  border-radius: 1.625rem;
+}
+
+button.learn-more .circle .icon {
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  background: #fff;
+
+}
+
+button.learn-more .circle .icon.arrow {
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  left: 0.625rem;
+  width: 1.125rem;
+  height: 0.125rem;
+  background: none;
+}
+
+button.learn-more .circle .icon.arrow::before {
+  position: absolute;
+  content: "";
+  top: -0.29rem;
+  right: 0.0625rem;
+  width: 0.625rem;
+  height: 0.625rem;
+  border-top: 0.125rem solid #fac031;
+  border-right: 0.125rem solid #fac031;
+  transform: rotate(45deg);
+}
+
+button.learn-more .button-text {
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 0.75rem 0;
+  margin: 0 0 0 1.85rem;
+  color: #282936;
+  font-weight: 700;
+  line-height: 1.6;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+button:hover .circle {
+  width: 100%;
+}
+
+button:hover .circle .icon.arrow {
+  background: #fac031;
+  transform: translate(1rem, 0);
+}
+
+button:hover .button-text {
+  color: #fac031;
+}
+
+@media(max-width:753px) {
+  #Home {
+    flex-direction: column;
+    padding-top: 115px;
+  }
+
+  #Home__1 {
+    width: 88%;
+    margin-right: 2%;
+  }
+
+  #Home img {
+    width: 80%;
+    margin-left: 0px;
+  }
+}
+
+
+/* About Style*/
+
+#About {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 100px 0px;
+}
+
+#About img {
+  width: 50%;
+  animation: move__1 5s 0s infinite;
+}
+
+#About__1 {
+  width: 45%;
+}
+
+#About__1 h1 {
+  font-size: 40px;
+  margin-bottom: 20px;
+  letter-spacing: 2px;
+}
+
+#About__1 h1 span {
+  color: #fac031;
+  margin-left: 5px;
+  font-family: cursive;
+}
+
+#About__1 h3 {
+  font-size: 30px;
+  margin-bottom: 40px;
+  letter-spacing: 2px;
+}
+
+
+@media(max-width:753px) {
+  #About {
+    flex-direction: column;
+  }
+
+  #About__1 {
+    width: 88%;
+    top: 0px;
+  }
+
+  #About img {
+    width: 80%;
+    bottom: 0px;
+  }
+
+}
+
+
+/* Menu Style */
+
+#Menu {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 100px 0px;
+}
+
+#Menu h1 {
+  font-size: 40px;
+  margin-bottom: 20px;
+  letter-spacing: 2px;
+}
+
+#Menu h1 span {
+  color: #fac031;
+  border-bottom: 3px solid #fac031;
+  font-family: cursive;
+}
+
+#Menu__1 {
+  width: 94%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Gallary Style */
+
+#Gallary {
+  position: relative;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 100px 0px;
+}
+
+#Gallary h1 {
+  font-size: 40px;
+  margin-bottom: 20px;
+  letter-spacing: 2px;
+}
+
+#Gallary h1 span {
+  color: #fac031;
+  border-bottom: 3px solid #fac031;
+  font-family: cursive;
+}
+
+#Gallary__1 {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+@media(max-width:753px) {
+  #Gallary__1 {
+    flex-direction: column;
+  }
+}
+
+/* Review Style */
+
+#Review {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 100px 0px;
+}
+
+#Review h1 {
+  font-size: 40px;
+  margin-bottom: 50px;
+  letter-spacing: 2px;
+}
+
+#Review h1 span {
+  color: #fac031;
+  border-bottom: 3px solid #fac031;
+  font-family: cursive;
+}
+
+#Review__1 {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+@media(max-width:753px) {
+  #Review__1 {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+/* Order Style */
+
+#Order {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 100px 0px;
+}
+
+#Order h1 {
+  font-size: 40px;
+  margin-bottom: 20px;
+  letter-spacing: 2px;
+}
+
+#Order h1 span {
+  color: #fac031;
+  border-bottom: 3px solid #fac031;
+  font-family: cursive;
+}
+
+#Order__1 {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+#Order__1 img {
+  width: 44%;
+  animation: move__1 5s 0s infinite;
+}
+
+#Order__1 form {
+  background: url(../public/img/bg1.jpg) no-repeat center center / 820px;
+  width: 45%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+  align-items: center;
+}
+
+#Order__1 form #in {
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+}
+
+#Order__1 form #in label {
+  color: #8d6d1c;
+  font-size: 18px;
+  margin: 12px 0px 4px 0px;
+}
+
+#Order__1 form #in input {
+  width: 90%;
+  height: 33px;
+  padding: 0px 5px;
+  font-size: 15px;
+  outline: none;
+  color: #644d14;
+  background-color: transparent;
+  border: 2px solid #fac031;
+}
+
+#Order__1 form button {
+  margin: 20px 0px;
+}
+
+@media(max-width:753px) {
+  #Order__1 {
+    flex-direction: column;
+  }
+
+  #Order__1 img {
+    width: 90%;
+  }
+
+  #Order__1 form {
+    width: 98%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+/* Team Style */
+
+#Team {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 100px 0px;
+  background: url(../public/img/bg1.jpg) no-repeat center center / cover;
+}
+
+#Team h1 {
+  font-size: 40px;
+  margin-bottom:130px;
+  letter-spacing: 2px;
+}
+
+#Team h1 span {
+  color: #fac031;
+  border-bottom: 3px solid #fac031;
+  font-family: cursive;
+}
+
+#Team__1 {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+@media(max-width:753px) {
+  #Team__1 {
+    flex-direction: column;
+  }
 }
