--- a/src/componants/Chef.css
+++ b/src/componants/Chef.css
@@ -1,6 +1,6 @@
 #Chef {
   position: relative;
-  width: 22%;
+  width: 330px;
   height: 330px;
   border-radius: 100%;
   box-shadow: 0px 0px 5px 3px rgb(190, 189, 189);
